# polynomial-factorization

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.MD
benchmarks/: CMakeLists.txt  distinct_degree_factorization.cpp  generator.hpp
experiments/: CMakeLists.txt
experiments/experiment_1/: berlekamp.hpp  counting_field_element.hpp  exp_1_out.txt  experiment.cpp  generator.hpp
experiments/experiment_2/: berlekamp.hpp  counting_field_element.hpp  exp_2_out.txt  experiment.cpp  generator.hpp
experiments/experiment_3/: berlekamp.hpp  exp_3_out.txt  experiment.cpp
factorization/: concepts.hpp  utils.hpp
factorization/galois_field/: field_element_wrapper.hpp  galois_field_element.hpp  log_based_field.hpp  prime_ring.hpp
factorization/parallel/: queue.hpp  task.hpp  thead_pool.hpp  wait_group.hpp
factorization/polynomial/: common.hpp  generic_polynomial.hpp  karatsuba_engine.hpp  naive_polynomial.hpp  ntt_engine.hpp  polynomial_base.hpp  simple_polynomial.hpp
factorization/runtime/: queue.hpp  task.hpp  thread_pool.hpp  wait_group.hpp
factorization/solver/: berlekamp.hpp  common.hpp  distinct_degree_factorization.hpp  square_free_factorization.hpp
tests/: CMakeLists.txt  generator.hpp  test_galois_field.cpp  test_galois_field_element.cpp  test_polynomial.cpp  test_solver.cpp
